--- a/Project Euler/Project Euler.csproj
+++ b/Project Euler/Project Euler.csproj
@@ -45,6 +45,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solutions\Problem13.cs" />
+    <Compile Include="Solutions\Problem14.cs" />
+    <Compile Include="Solutions\Problem16.cs" />
+    <Compile Include="Solutions\Problem17.cs" />
+    <Compile Include="Solutions\Problem20.cs" />
+    <Compile Include="Solutions\Problem51.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
